--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,118 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  font-family: "Space Grotesk", sans-serif;
+}
+body{
+  background: linear-gradient(180deg, #0a2740, #243b51, #1a4e5c);
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+::-webkit-scrollbar {
+  width: 15px;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
+
+html:has(.mobile__nav) {
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.container{
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 1728px;
+}
+body{
+  background-color: #302c34;
+}
+@media (max-width:768px) {
+  main {
+    padding-bottom: 90px !important;
   }
+}
+
+.loading {
+  animation: loading-up 2s ease both infinite;
+}
+.chat__text{
+    a{
+        color: blue;
+    }
+}
+.dot {
+  animation: dot-pulse 1s ease both infinite;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 100%;
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+}
+
+.dot--one {
+  animation-delay: 0;
+}
+.dot--two {
+  animation-delay: 0.3s;
+}
+.dot--three {
+  animation-delay: 0.6s;
+}
+
+@keyframes dot-pulse {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+.chat-view {
+  background: linear-gradient(135deg, #fdf6f3, #f4e1e9, #e5e9f3);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
