--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+.logo{
+  font-family: "Oswald", sans-serif;
+}
 * {
   margin: 0;
   padding: 0;
@@ -67,11 +69,7 @@ html:has(.mobile__nav) {
 body{
   background-color: #302c34;
 }
-@media (max-width:768px) {
-  main {
-    padding-bottom: 90px !important;
-  }
-}
+
 
 .loading {
   animation: loading-up 2s ease both infinite;
