--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-.logo{
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
+.logo {
   font-family: "Oswald", sans-serif;
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -20,13 +23,15 @@ html {
 body {
   scroll-behavior: smooth;
   overflow-x: hidden;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
-body{
+
+body {
   background: linear-gradient(180deg, #0a2740, #243b51, #1a4e5c);
   background-repeat: no-repeat;
   min-height: 100vh;
 }
+
 ::-webkit-scrollbar {
   width: 15px;
 }
@@ -60,13 +65,14 @@ html:has(.mobile__nav) {
   overflow-y: hidden;
 }
 
-.container{
+.container {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   max-width: 1728px;
 }
-body{
+
+body {
   background-color: #302c34;
 }
 
@@ -74,11 +80,13 @@ body{
 .loading {
   animation: loading-up 2s ease both infinite;
 }
-.chat__text{
-    a{
-        color: blue;
-    }
+
+.chat__text {
+  a {
+    color: blue;
+  }
 }
+
 .dot {
   animation: dot-pulse 1s ease both infinite;
   background: rgba(0, 0, 0, 0.5);
@@ -91,9 +99,11 @@ body{
 .dot--one {
   animation-delay: 0;
 }
+
 .dot--two {
   animation-delay: 0.3s;
 }
+
 .dot--three {
   animation-delay: 0.6s;
 }
@@ -102,9 +112,11 @@ body{
   0% {
     transform: scale(0);
   }
+
   50% {
     transform: scale(1);
   }
+
   100% {
     transform: scale(0);
   }
